# ansible-role-gitlab-runner

./: .github_changelog_generator  .gitignore  .gitlab-ci.yml  .yamllint  CHANGELOG.md  CITATION.cff  HISTORY.md  HISTORY.md.license  LICENSE.md  README.md  VERSION  pyproject.toml  requirements.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
.github/workflows/prepare-action/: action.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  test_key  test_key.pub  test_key.pub.license  verify.yml
tasks/: configuration.yml  docker-machine-init.yml  install.debianlike.yml  install.docker-machine.yml  main.yml  register.yml  separate-runner-configuration.yml  update-configuration.yml  update-runner-configuration.yml
templates/: config.toml.j2  flatcar-linux-config.bu.j2  flatcar-linux-config.yml.j2  gitlab-runner.list.j2  pin-gitlab-runner.pref.j2  pin-gitlab-runner.pref.j2.license  runner_config.j2
vars/: debian.yml  main.yml
