# SPDX-FileCopyrightText: 2020 Helmholtz Centre for Environmental Research (UFZ)
# SPDX-FileCopyrightText: 2020 Helmholtz-Zentrum Dresden - Rossendorf (HZDR)
#
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "gitlab-ci-openstack"
version = "1.12.0"
description = "This role provides a setup for GitLab CI in Openstack."
authors = ["Tobias Huste <t.huste@hzdr.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^8.6.1"

[tool.poetry.dev-dependencies]
ansible-lint = { version = "^6.21.1", markers = "platform_system != 'Windows'" }
yamllint = "^1.32.0"
reuse = "^2.1.0"
molecule = "^6.0.2"
molecule-plugins = {version = "^23.5.0", extras = ["podman"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
