# SPDX-FileCopyrightText: 2020 Helmholtz Centre for Environmental Research (UFZ)
# SPDX-FileCopyrightText: 2020 Helmholtz-Zentrum Dresden - Rossendorf (HZDR)
#
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = "gitlab-ci-openstack"
version = "1.14.0"
description = "This role provides a setup for GitLab CI in Openstack."
authors = ["Tobias Huste <t.huste@hzdr.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^8.7.0"

[tool.poetry.dev-dependencies]
ansible-lint = { version = "^6.22.1", markers = "platform_system != 'Windows'" }
yamllint = "^1.35.0"
reuse = "^3.0.1"
molecule = "^6.0.3"
molecule-plugins = {version = "^23.5.3", extras = ["podman"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
